# file-browser-cli

./: .gitignore  pyproject.toml
.github/workflows/: python-package.yml
src/: cli.py
src/file_browser_cli/: cli.py  code_browser.py  file_browser.py
test/: test_file_browser.py
